2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (allocate_regstart)
	[!DEBUG_RELOCATOR_NOMEM_DPRINTF]: Avoid grub_dprintf since not all
	terminals are capabple of malloc-free operation.
	(allocate_inreg) [!DEBUG_RELOCATOR_NOMEM_DPRINTF]: Likewise.
	(malloc_in_range) [!DEBUG_RELOCATOR_NOMEM_DPRINTF]: Likewise.

2011-03-29  Mario Limonciello  <Mario_Limonciello@Dell.com>

        * util/grub-setup.c: Copy the partition table zone if floppy support
	is disabled, even if no partition table is found.

        Otherwise, the BIOS on Dell Latitude E series laptops will freeze
        during POST if an invalid partition table is contained in the PBR
        of the active partition when GRUB is installed to a partition.

2011-03-28  Colin Watson  <cjwatson@debian.org>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Remove stale
	comment.

2011-03-28  Colin Watson  <cjwatson@debian.org>

	* grub-core/disk/raid.c (grub_raid_register): Adjust debug message
	to be specific about what kind of RAID device we're scanning for.

2011-03-26  Seth Goldberg <seth.goldberg@oracle.com>

	* grub-core/kern/emu/getroot.c (find_root_device_from_libzfs): Don't
	return freed string.

2011-03-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_label): Rtrim the label.

2011-03-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Use libgeom on FreeBSD to detect partitions.

	* Makefile.util.def (grub-mkimage): Add LIBGEOM to ldadd.
	(grub-mkrelpath): Likewise.
	(grub-script-check): Likewise.
	(grub-editenv): Likewise.
	(grub-mkpasswd-pbkdf2): Likewise.
	(grub-fstest): Likewise.
	(grub-mkfont): Likewise.
	(grub-mkdevicemap): Likewise.
	(grub-probe): Likewise.
	(grub-setup): Likewise.
	(grub-ofpathname): Likewise.
	(grub-mklayout): Likewise.
	(example_unit_test): Likewise.
	(grub-menulst2cfg): Likewise.
	* grub-core/Makefile.core.def (grub-emu): Likewise.
	(grub-emu-lite): Likewise.